# axum_tower_livereload_chrome_issue

./: Cargo.toml  README.md
assets/: 1.html  10.html  11.html  12.html  13.html  14.html  15.html  16.html  17.html  18.html  19.html  2.html  20.html  3.html  4.html  5.html  6.html  7.html  8.html  9.html  index.html
src/: main.rs
